# System-Monitor-Project

./: CMakeLists.txt  DesignDoc.txt  README.md  out
src/: MainWindow.cpp  MainWindow.hpp  SystemResourceMonitor.ui  cpuinfo.cpp  cpuinfo.hpp  file_loader.cpp  file_loader.hpp  information.cpp  information.hpp  main  main.cpp  mem.cpp  mem.hpp  pid.cpp  pid.hpp  processes.cpp  processes.hpp  string_helper.cpp  string_helper.hpp  sysinfo.cpp  sysinfo.hpp  ui_SystemResourceMonitor.h
